tests/NormalTests/paczka1/fuzzy1/51938087.err
Error in line 1: ARRN S348 10,0
Error in line 9: A380 S63 6,8
Error in line 15: TsgyJo S207 1,11
Error in line 13: 9owKy A380 85,5
Error in line 12: A380 S207 78,5
Error in line 22: A380 A380 74,4
Error in line 11: F24 S207 74,3
Error in line 25: F24 S63 77,6
Error in line 23: A380 S207 21,2
Error in line 21: 9owKy S207 33,9
Error in line 29: F24 S207 17,2
Error in line 38: F24 S348 87,2
